// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dateInputField > should clear field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_3o_"
          aria-describedby="_r_3o_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_3p_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value=""
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8C5.131 8 4.769 8.362 4.769 8.808 4.769 9.254 5.131 9.615 5.577 9.615 6.023 9.615 6.385 9.254 6.385 8.808 6.385 8.362 6.023 8 5.577 8ZM4.769 10.962C4.769 10.516 5.131 10.154 5.577 10.154 6.023 10.154 6.385 10.516 6.385 10.962 6.385 11.408 6.023 11.769 5.577 11.769 5.131 11.769 4.769 11.408 4.769 10.962ZM10.423 8C9.977 8 9.616 8.362 9.616 8.808 9.616 9.254 9.977 9.615 10.423 9.615 10.869 9.615 11.231 9.254 11.231 8.808 11.231 8.362 10.869 8 10.423 8ZM7.192 8.808C7.192 8.362 7.554 8 8 8 8.446 8 8.808 8.362 8.808 8.808 8.808 9.254 8.446 9.615 8 9.615 7.554 9.615 7.192 9.254 7.192 8.808ZM8 10.154C7.554 10.154 7.192 10.516 7.192 10.962 7.192 11.408 7.554 11.769 8 11.769 8.446 11.769 8.808 11.408 8.808 10.962 8.808 10.516 8.446 10.154 8 10.154Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="uv_9rlyg93 uv_9rlyg91 uv_w40vpo4"
            id="_r_3o_"
            role="dialog"
            style="--uv_ozfz3c0: -5px; --uv_ozfz3c1: 0px; --uv_ozfz3c2: rotate(180deg); --uv_ozfz3c4: translate3d(0px, 4px, 0); --uv_ozfz3c5: 0ms; --uv_ozfz3c6: translate3d(0px, 4px, 0); --uv_ozfz3c7: 16.5rem; opacity: 1;"
          >
            <div
              class="uv_w40vpo2"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d uv_toi52u3v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u2j uv_toi52u77"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeh uv_e1wcoej uv_e1wcoe19"
                    data-testid="previous-month"
                    type="button"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowLeftIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <span
                    class="uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    September 2022
                  </span>
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeh uv_e1wcoej uv_e1wcoe19"
                    data-testid="next-month"
                    type="button"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowRightIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="uv_x6hyh50 uv_x6hyh52j"
                  style="--uv_3mg8xe0: repeat(7, 1fr); --uv_3mg8xe1: repeat(7, 1fr); --uv_3mg8xe2: repeat(7, 1fr); --uv_3mg8xe3: repeat(7, 1fr); --uv_3mg8xe4: repeat(7, 1fr); --uv_3mg8xe5: repeat(7, 1fr);"
                >
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Mo
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Tu
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    We
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Th
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Fr
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Sa
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Su
                  </p>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    31
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    9
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    10
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    11
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    12
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    13
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    14
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    15
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    16
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    17
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    18
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    19
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    20
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    21
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    22
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    23
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    24
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    25
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    26
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    27
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    28
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    9
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_1_"
                name="test"
                type="text"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8C5.131 8 4.769 8.362 4.769 8.808 4.769 9.254 5.131 9.615 5.577 9.615 6.023 9.615 6.385 9.254 6.385 8.808 6.385 8.362 6.023 8 5.577 8ZM4.769 10.962C4.769 10.516 5.131 10.154 5.577 10.154 6.023 10.154 6.385 10.516 6.385 10.962 6.385 11.408 6.023 11.769 5.577 11.769 5.131 11.769 4.769 11.408 4.769 10.962ZM10.423 8C9.977 8 9.616 8.362 9.616 8.808 9.616 9.254 9.977 9.615 10.423 9.615 10.869 9.615 11.231 9.254 11.231 8.808 11.231 8.362 10.869 8 10.423 8ZM7.192 8.808C7.192 8.362 7.554 8 8 8 8.446 8 8.808 8.362 8.808 8.808 8.808 9.254 8.446 9.615 8 9.615 7.554 9.615 7.192 9.254 7.192 8.808ZM8 10.154C7.554 10.154 7.192 10.516 7.192 10.962 7.192 11.408 7.554 11.769 8 11.769 8.446 11.769 8.808 11.408 8.808 10.962 8.808 10.516 8.446 10.154 8 10.154Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_4_"
          aria-describedby="_r_4_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="true"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                disabled=""
                id="_r_5_"
                name="test"
                type="text"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1a"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8C5.131 8 4.769 8.362 4.769 8.808 4.769 9.254 5.131 9.615 5.577 9.615 6.023 9.615 6.385 9.254 6.385 8.808 6.385 8.362 6.023 8 5.577 8ZM4.769 10.962C4.769 10.516 5.131 10.154 5.577 10.154 6.023 10.154 6.385 10.516 6.385 10.962 6.385 11.408 6.023 11.769 5.577 11.769 5.131 11.769 4.769 11.408 4.769 10.962ZM10.423 8C9.977 8 9.616 8.362 9.616 8.808 9.616 9.254 9.977 9.615 10.423 9.615 10.869 9.615 11.231 9.254 11.231 8.808 11.231 8.362 10.869 8 10.423 8ZM7.192 8.808C7.192 8.362 7.554 8 8 8 8.446 8 8.808 8.362 8.808 8.808 8.808 9.254 8.446 9.615 8 9.615 7.554 9.615 7.192 9.254 7.192 8.808ZM8 10.154C7.554 10.154 7.192 10.516 7.192 10.962 7.192 11.408 7.554 11.769 8 11.769 8.446 11.769 8.808 11.408 8.808 10.962 8.808 10.516 8.446 10.154 8 10.154Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should test range 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_20_"
          aria-describedby="_r_20_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_21_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value="9/15/2022 - 9/18/2022"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8C5.131 8 4.769 8.362 4.769 8.808 4.769 9.254 5.131 9.615 5.577 9.615 6.023 9.615 6.385 9.254 6.385 8.808 6.385 8.362 6.023 8 5.577 8ZM4.769 10.962C4.769 10.516 5.131 10.154 5.577 10.154 6.023 10.154 6.385 10.516 6.385 10.962 6.385 11.408 6.023 11.769 5.577 11.769 5.131 11.769 4.769 11.408 4.769 10.962ZM10.423 8C9.977 8 9.616 8.362 9.616 8.808 9.616 9.254 9.977 9.615 10.423 9.615 10.869 9.615 11.231 9.254 11.231 8.808 11.231 8.362 10.869 8 10.423 8ZM7.192 8.808C7.192 8.362 7.554 8 8 8 8.446 8 8.808 8.362 8.808 8.808 8.808 9.254 8.446 9.615 8 9.615 7.554 9.615 7.192 9.254 7.192 8.808ZM8 10.154C7.554 10.154 7.192 10.516 7.192 10.962 7.192 11.408 7.554 11.769 8 11.769 8.446 11.769 8.808 11.408 8.808 10.962 8.808 10.516 8.446 10.154 8 10.154Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_8_"
          aria-describedby="_r_8_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_9_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value="9/15/2022"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8C5.131 8 4.769 8.362 4.769 8.808 4.769 9.254 5.131 9.615 5.577 9.615 6.023 9.615 6.385 9.254 6.385 8.808 6.385 8.362 6.023 8 5.577 8ZM4.769 10.962C4.769 10.516 5.131 10.154 5.577 10.154 6.023 10.154 6.385 10.516 6.385 10.962 6.385 11.408 6.023 11.769 5.577 11.769 5.131 11.769 4.769 11.408 4.769 10.962ZM10.423 8C9.977 8 9.616 8.362 9.616 8.808 9.616 9.254 9.977 9.615 10.423 9.615 10.869 9.615 11.231 9.254 11.231 8.808 11.231 8.362 10.869 8 10.423 8ZM7.192 8.808C7.192 8.362 7.554 8 8 8 8.446 8 8.808 8.362 8.808 8.808 8.808 9.254 8.446 9.615 8 9.615 7.554 9.615 7.192 9.254 7.192 8.808ZM8 10.154C7.554 10.154 7.192 10.516 7.192 10.962 7.192 11.408 7.554 11.769 8 11.769 8.446 11.769 8.808 11.408 8.808 10.962 8.808 10.516 8.446 10.154 8 10.154Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
